--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
